[metadata]
name = edupage_api
version = 0.9.6
description = A python library for accessing your Edupage account
long_description = file: README.md
long_description_content_type = text/markdown
author = ivanhrabcak
author_email = ivan@hrabcak.eu
keywords = edupage, edupage api, library
url = https://github.com/ivanhrabcak/edupage-api
classifiers = 
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
python_requires = >=3.6
install_requires = requests
