[metadata]
name = edupage_api
version = 0.10.1
description = A python library for accessing your Edupage account
long_description = file: README.md
long_description_content_type = text/markdown
author = ivanhrabcak
author_email = ivan@hrabcak.eu
keywords = edupage, edupage api, library
url = https://github.com/ivanhrabcak/edupage-api
classifiers = 
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.9
install_requires = requests
